--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html"><span>Home</span></a></li>
-          <li><a class="nav-link scrollto" href="index.html#why-us">Why WV</a></li>
           <li><a class="nav-link scrollto" href="index.html#photos">Photos</a></li>
           <li><a class="nav-link scrollto" href="index.html#videos">Videos</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
           <li><a class="nav-link scrollto" href="index.html#questions">Questions</a></li>
           <a></a>
           <a></a>
@@ -97,8 +97,8 @@
 
   <main id="main">
 
-    <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="about">
+    <!-- ======= Summary Section ======= -->
+    <section id="summary" class="about">
       <div class="container" data-aos="fade-up">
 
         <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
-                  <a><strong>Accommodation address:</strong> London NW2 5BW, United Kingdom</a>
+                  <a><strong>Accommodation address:</strong> Connaught Square & Connaught St Tyburnia, London W2 2BH</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
@@ -135,127 +135,7 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
-
-    <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="about">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-header">
-          <h2>Why WeVisit</h2>  
-        </div>
-
-        <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
-
-          <div class="col-lg-5">
-            <div class="about-img">
-              <img src="assets/img/why-us.webp" width="450px" height="484px" class="img-fluid" alt="why us" loading="lazy">
-            </div>
-          </div>
-
-          <div class="col-lg-7">
-
-            <!-- Tabs -->
-            <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Why Us</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">What we solve</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">How we do</a></li>
-            </ul><!-- End Tabs -->
-
-            <!-- Tab Content -->
-            <div class="tab-content">
-
-              <div class="tab-pane fade show active" id="tab1">
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>London renting market is very competitive, with good places experiencing several visits a day and being rented out within their first week advertised.</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>It is very dangerous to pay in advance for a property you have not seen yourself without meeting the owners. Avoid it!</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>Taking the safest route would involve renting a hotel or Airbnb for a few weeks while you search for a long-term place to stay.
-                    This could be expensive, and not everyone has a relocation package!</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>You might not know the UK regulations and laws so you could have a bad deal or be in an illegal position, like your deposit not being legally protected.</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>WeVisit the properties for you while you are at home in your home country and we will meet the agency or the landlord on your behalf.</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>WeVisit will send you back a report with pictures, videos and red flags (if any!) after the visit.</a>
-                </div>
-
-              </div><!-- End Tab 1 Content -->
-
-              <div class="tab-pane fade show" id="tab2">
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>They might ignore you because you're not in London yet for the viewings yet.</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>The problem of renting a room or a flat without the possibility of visiting by yourself.</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>We are a third party, so we will not get biased towards making you rent something you will not like.</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>Reduce online scams.</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>Save money for people having to rent a hotel or an Airbnb while visiting rooms, flats, or houses.</a>
-                </div>
-
-              </div><!-- End Tab 2 Content -->
-
-              <div class="tab-pane fade show" id="tab3">
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>We will take pictures and videos of the surrounding area and the outside and the inside of the property. Then, you will receive a report our findings.</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>We also include priceless details such as how tidy, clean, noisy, and how well insulated it is (or not!).</a>
-                </div>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>If something looks dodgy or we don't think that the landlord is legit we will let you know.</a>
-                </div>
-
-              </div><!-- End Tab 3 Content -->
-
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Why Us Section -->
+    </section><!-- End Summary Section -->
 
     <!-- ======= Photo Section ======= -->
     <section id="photos" class="portfolio" data-aos="fade-up">
@@ -346,11 +226,11 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Video Section ======= -->
-    <section id="videos" class="onfocus">
+    <section id="videos" class="onfocus" style="margin-top: 50px">
 
       <div class="container">
 
-        <div class="section-header">
+        <div class="section-header">        
           <h2>Videos</h2>
         </div>
 
@@ -366,6 +246,218 @@
 
       </div>
     </section><!-- End Video Section -->
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="features" style="margin-top: 50px">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-header">        
+          <h2>Services</h2>
+        </div>
+
+        <ul class="nav nav-tabs row gy-4 d-flex">
+
+          <li class="nav-item col-6 col-md-4 col-lg-2">
+            <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#tab-1">
+              <i class="bi bi-binoculars color-cyan"></i>
+              <h4>Modinest</h4>
+            </a>
+          </li><!-- End Tab 1 Nav -->
+
+          <li class="nav-item col-6 col-md-4 col-lg-2">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
+              <i class="bi bi-box-seam color-indigo"></i>
+              <h4>Undaesenti</h4>
+            </a>
+          </li><!-- End Tab 2 Nav -->
+
+          <li class="nav-item col-6 col-md-4 col-lg-2">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-3">
+              <i class="bi bi-brightness-high color-teal"></i>
+              <h4>Pariatur</h4>
+            </a>
+          </li><!-- End Tab 3 Nav -->
+
+          <li class="nav-item col-6 col-md-4 col-lg-2">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-4">
+              <i class="bi bi-command color-red"></i>
+              <h4>Nostrum</h4>
+            </a>
+          </li><!-- End Tab 4 Nav -->
+
+          <li class="nav-item col-6 col-md-4 col-lg-2">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-5">
+              <i class="bi bi-easel color-blue"></i>
+              <h4>Adipiscing</h4>
+            </a>
+          </li><!-- End Tab 5 Nav -->
+
+          <li class="nav-item col-6 col-md-4 col-lg-2">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-6">
+              <i class="bi bi-map color-orange"></i>
+              <h4>Reprehit</h4>
+            </a>
+          </li><!-- End Tab 6 Nav -->
+
+        </ul>
+
+        <div class="tab-content">
+
+          <div class="tab-pane active show" id="tab-1">
+            <div class="row gy-4">
+              <div class="col-lg-8 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+                <h3>Modinest</h3>
+                <p class="fst-italic">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua.
+                </p>
+                <ul>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                </ul>
+                <p>
+                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum
+                </p>
+              </div>
+              <div class="col-lg-4 order-1 order-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
+                <img src="assets/img/features-1.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div><!-- End Tab Content 1 -->
+
+          <div class="tab-pane" id="tab-2">
+            <div class="row gy-4">
+              <div class="col-lg-8 order-2 order-lg-1">
+                <h3>Undaesenti</h3>
+                <p>
+                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <p class="fst-italic">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua.
+                </p>
+                <ul>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                </ul>
+              </div>
+              <div class="col-lg-4 order-1 order-lg-2 text-center">
+                <img src="assets/img/features-2.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div><!-- End Tab Content 2 -->
+
+          <div class="tab-pane" id="tab-3">
+            <div class="row gy-4">
+              <div class="col-lg-8 order-2 order-lg-1">
+                <h3>Pariatur</h3>
+                <p>
+                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <ul>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
+                </ul>
+                <p class="fst-italic">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua.
+                </p>
+              </div>
+              <div class="col-lg-4 order-1 order-lg-2 text-center">
+                <img src="assets/img/features-3.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div><!-- End Tab Content 3 -->
+
+          <div class="tab-pane" id="tab-4">
+            <div class="row gy-4">
+              <div class="col-lg-8 order-2 order-lg-1">
+                <h3>Nostrum</h3>
+                <p>
+                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <p class="fst-italic">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua.
+                </p>
+                <ul>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                </ul>
+              </div>
+              <div class="col-lg-4 order-1 order-lg-2 text-center">
+                <img src="assets/img/features-4.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div><!-- End Tab Content 4 -->
+
+          <div class="tab-pane" id="tab-5">
+            <div class="row gy-4">
+              <div class="col-lg-8 order-2 order-lg-1">
+                <h3>Adipiscing</h3>
+                <p>
+                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <p class="fst-italic">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua.
+                </p>
+                <ul>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                </ul>
+              </div>
+              <div class="col-lg-4 order-1 order-lg-2 text-center">
+                <img src="assets/img/features-5.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div><!-- End Tab Content 5 -->
+
+          <div class="tab-pane" id="tab-6">
+            <div class="row gy-4">
+              <div class="col-lg-8 order-2 order-lg-1">
+                <h3>Reprehit</h3>
+                <p>
+                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum
+                </p>
+                <p class="fst-italic">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua.
+                </p>
+                <ul>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                </ul>
+              </div>
+              <div class="col-lg-4 order-1 order-lg-2 text-center">
+                <img src="assets/img/features-6.svg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div><!-- End Tab Content 6 -->
+
+        </div>
+
+      </div>
+    </section><!-- End Features Section -->
 
     <!-- ======= Questions Section ======= -->
     <section id="questions" class="faq">
