--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
             <div class="row gy-4">
               <div class="col-lg-8 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
                 <ul>
-                  <li><i class="bi bi-dash"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="bi bi-dash"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="bi bi-dash"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                  <li><i class="bi bi-dash"></i> Marble Arch Underground Stop (Central line) - 0.3 miles</li>
+                  <li><i class="bi bi-dash"></i> Edgware Road Underground Stop (Circle, District and Hammersmith & City line and Bakerloo lines) - 0.5 miles</li>
+                  <li><i class="bi bi-dash"></i> Paddington Station (Circle, District and Hammersmith & City line, Bakerloo lines and Elizabeth lines; GWR and Heathrow Express trains) - 0.6 miles</li>
                 </ul>
               </div>
             </div>
@@ -298,10 +298,11 @@
             <div class="row gy-4">
               <div class="col-lg-8 order-2 order-lg-1">
                 <ul>
-                  <li><i class="bi bi-dash"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="bi bi-dash"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="bi bi-dash"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
-                  <li><i class="bi bi-dash"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                  <li><i class="bi bi-dash"></i> Tesco - 310 feets</li>
+                  <li><i class="bi bi-dash"></i> Al Baraka Supermarket - 0.2 miles</li>
+                  <li><i class="bi bi-dash"></i> Al Mustafa - 0.2 miles</li>
+                  <li><i class="bi bi-dash"></i> Food and Wine Store - 0.2 miles</li>
+                  <li><i class="bi bi-dash"></i> Waitrose - 0.2 miles</li>
                 </ul>
               </div>
             </div>
@@ -311,9 +312,10 @@
             <div class="row gy-4">
               <div class="col-lg-8 order-2 order-lg-1">
                 <ul>
-                  <li><i class="bi bi-dash"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="bi bi-dash"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="bi bi-dash"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
+                  <li><i class="bi bi-dash"></i> The Gym Way - 0.3 miles</li>
+                  <li><i class="bi bi-dash"></i> Virgin Active - 0.4 miles</li>
+                  <li><i class="bi bi-dash"></i> F45 Training London Paddington - 0.5 miles</li>
+                  <li><i class="bi bi-dash"></i> Fitness First Baker Street - 0.6 miles</li>
                 </ul>
               </div>
             </div>
