--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <ul>
                   <li><i class="bi bi-dash"></i> Marble Arch Underground Stop (Central line) - 0.3 miles</li>
                   <li><i class="bi bi-dash"></i> Edgware Road Underground Stop (Circle, District and Hammersmith & City line and Bakerloo lines) - 0.5 miles</li>
-                  <li><i class="bi bi-dash"></i> Paddington Station (Circle, District and Hammersmith & City line, Bakerloo lines and Elizabeth lines; GWR and Heathrow Express trains) - 0.6 miles</li>
+                  <li><i class="bi bi-dash"></i> Paddington Station (Circle, District and Hammersmith & City line, Bakerloo lines and Elizabeth linesgit; GWR and Heathrow Express trains) - 0.6 miles</li>
                 </ul>
               </div>
             </div>
@@ -325,6 +325,14 @@
 
       </div>
     </section><!-- End Features Section -->
+
+    <section id="contact" class="contact">
+
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9036922416703!2d-0.16758706611769159!3d51.5149828528435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761acacae640f1%3A0xb0dd5a773dbd3f89!2sConnaught%20Square%20%26%20Connaught%20St%2C%20Tyburnia%2C%20London%20W2%202BH%2C%20Reino%20Unido!5e0!3m2!1ses!2ses!4v1662760168855!5m2!1ses!2ses" frameborder="0" allowfullscreen></iframe>
+      </div><!-- End Google Maps -->
+
+    </section>
 
     <!-- ======= Questions Section ======= -->
     <section id="questions" class="faq">
