Updating report.html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
               <div class="icon"><i class="bi bi-file-earmark-check icon"></i></div>
               <h4>Get our report</h4>
               <p>We will check the inside, outside and property surroundings of the property.
-                 We will take pictures and videos and feedback to you promptly.</p>
+                 We will take pictures and videos and feedback to you promptly.
+              <br />
+                <a href="report.html" target="_blank">See our example report here!</a>
+              </p>
             </div>
           </div><!-- End Service Item -->
 
@@ -217,7 +220,9 @@
                   <i class="bi bi-file-richtext"></i>
                 </div>
                 <h3>Report</h3>
-                <p>Let us wrap everything up. You will get real pictures and videos from the moment of the visit, and you will get all your questions answered.</p>
+                <p>Let us wrap everything up. You will get real pictures and videos from the moment of the visit, and you will get all your questions answered.
+                  <br /><a href="report.html" target="_blank">See our example report here!</a>
+                </p>
               </div>
             </div>
           </div><!-- End Service Item -->
