Updating report.html

--- a/index.html
+++ b/index.html
@@ -386,6 +386,11 @@
                   <a>If something looks dodgy or we don't think that the landlord is legit we will let you know.</a>
                 </div>
 
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a href="report.html" target="_blank">See our example report here!</a>
+                </div>
+
               </div><!-- End Tab 3 Content -->
 
             </div>
@@ -472,7 +477,7 @@
 
               <ul>
                 <li><i class="bi bi-dot"></i> <span>Property visit (free!)</span></li>
-                <li><i class="bi bi-dot"></i> <span>Videos and photos report</span></li>
+                <li><i class="bi bi-dot"></i> <span><a href="report.html" target="_blank">Videos and photos report</a></span></li>
                 <li><i class="bi bi-dot"></i> <span>Summary of the surrounding area and the property</span></li>
 
                 <li class="na"><i class="bi bi-x"></i> <span>A specific list of questions to ask the agency/landlord</span></li>
@@ -499,7 +504,7 @@
 
               <ul>
                 <li><i class="bi bi-dot"></i> <span>Property visit</span></li>
-                <li><i class="bi bi-dot"></i> <span>Video and photos report</span></li>
+                <li><i class="bi bi-dot"></i> <span><a href="report.html" target="_blank">Videos and photos report</a></span></li>
                 <li><i class="bi bi-dot"></i> <span>Summary of the surrounding area and the property</span></li>
                 <li><i class="bi bi-dot"></i> <span>A specific list of questions to ask the agency/landlord</span></li>
                 <li><i class="bi bi-dot"></i> <span>A specific list of things to check outside the report scope</span></li>
@@ -526,7 +531,7 @@
 
               <ul>
                 <li><i class="bi bi-dot"></i> <span>Property visit</span></li>
-                <li><i class="bi bi-dot"></i> <span>Video and photos report</span></li>
+                <li><i class="bi bi-dot"></i> <span><a href="report.html" target="_blank">Videos and photos report</a></span></li>
                 <li><i class="bi bi-dot"></i> <span>Summary of the surrounding area and the property</span></li>
                 <li><i class="bi bi-dot"></i> <span>A specific list of questions to ask the agency/landlord</span></li>
                 <li><i class="bi bi-dot"></i> <span>A specific list of things to check outside the report scope</span></li>
@@ -643,6 +648,8 @@
                     We will let you know if the property looks like the advert. We will take pictures and photos on the day of the visit.
                     Also, we will check things for you in advance: are the bathrooms clean? does the property look tidy?
                     is it noisy? is it well insulated?
+                    <br />
+                    <a href="report.html" target="_blank">See our example report here!</a>
                   </div>
                 </div>
               </div><!-- # Faq item-->
